--- a/client/src/css/Modal.scss
+++ b/client/src/css/Modal.scss
@@ -64,6 +64,7 @@
             &__action {
                 width: 40px;
                 height: 40px;
+                padding: 0;
                 display: flex;
                 align-items: center;
                 justify-content: center;
